# racman

./: Cargo.toml
alpm/benches/: list.rs
alpm/src/: alpm.rs  be_pkg.rs  conflict.rs  db.rs  deps.rs  list.rs  package.rs  sync.rs  types.rs
racman/: Cargo.toml
racman/src/: cli.yaml  main.rs  racman.rs  set_cbs.rs
racman/src/action/: mod.rs  update.rs
racman/src/cbs/: event.rs  mod.rs  progress.rs  question.rs  transaction_confirmation.rs
racman/src/transaction/: install.rs  mod.rs  remove.rs  upgrade.rs
ramac/: Cargo.toml
ramac/src/: main.rs  racman.rs
ramac/src/cbs/: event.rs  fetch.rs  log.rs  mod.rs  progress.rs
ramac/src/transaction/: install.rs  mod.rs  remove.rs  upgrade.rs
