[package]
name = "racman"
version = "0.1.0"
authors = ["PJTSearch <pjtsignups@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = { version = "0.10.0", path = "../alpm" }
lazy_static = "1.4.0"
indicatif = "0.15.0"
quest = "0.3.0"
clap={version="2.33.3", features = ["yaml"]}
anyhow = "1.0.32"